@@ -18,42 +18,9 @@
 -->
 
 <project name="solr" default="usage" basedir=".">
-  <!-- Initialize property values: allow easy customization via build.properties -->
-  <property file="build.properties" />
-
-  <property name="Name" value="Solr" />
-
-  <tstamp>
-    <format property="year" pattern="yyyy"/>
-    <format property="DSTAMP" pattern="yyyy-MM-dd"/>
-    <format property="TSTAMP" pattern="HH:mm:ss"/>
-    <!-- datetime format that is safe to treat as part of a dotted version -->
-    <format property="dateversion" pattern="yyyy.MM.dd.HH.mm.ss" />
-  </tstamp>
-
-  <!-- Java Version we are compatible with -->
-  <property name="java.compat.version" value="1.5" />
-
-  <!-- Solr Implementation Version -->
-  <!--
-       This can be any string value that does not include spaces
-       This will be used when creating build artifact file names.
-
-       By default, this should be set to "X.Y.N-dev" where X.Y.N is
-       "1 greater" then the last version released (on this branch).
-    -->
-  <property name="version" value="1.3-dev" />
+	
+  <import file="common-build.xml"/>
   
-  <!-- Solr Specification Version -->
-  <!--
-       This will be used in the Manifest file, and therefore must
-       match the pattern "digit+{.digit+}*"
-       
-       By default, this should be set to "X.Y.M.${dateversion}"
-       where X.Y.M is the last version released (on this branch).
-    -->
-  <property name="specversion" value="1.2.${dateversion}" />
-
   <!-- 3rd party libraries for compilation -->
   <property name="lib" value="lib" />
 
@@ -66,33 +33,17 @@
   <!-- Destination for distribution files (demo WAR, src distro, etc.) -->
   <property name="dist" value="dist" />
 
-  <!-- Type of checksum to compute for distribution files -->
-  <property name="checksum.algorithm" value="md5" />
-
   <!-- Example directory -->
   <property name="example" value="example" />
 
-  <property name="fullname" value="apache-${ant.project.name}"/>
-  <property name="fullnamever" value="apache-${ant.project.name}-${version}"/>
-
   <!-- Javadoc properties -->
-  <property name="javadoc.years" value="2006 - ${year}" />
   <property name="build.docs" value="${dest}/docs"/>
   <property name="build.javadoc" value="${build.docs}/api"/>
   <property name="build.javadoc.solrj" value="${build.docs}/api-solrj"/>
-  <property name="javadoc.access" value="protected"/>
-  <property name="javadoc.link.java"
-            value="http://java.sun.com/j2se/1.5.0/docs/api/"/>
-  <property name="javadoc.link.junit"
-            value="http://junit.sourceforge.net/javadoc/"/>
-  <property name="javadoc.link.lucene"
-            value="http://lucene.apache.org/java/docs/api/"/>
-  <property name="javadoc.packages" value="org.apache.solr.*"/>
-
+  
   <!-- JUnit properties -->
   <property name="junit.output.dir" location="${dest}/test-results"/>
   <property name="junit.reports" location="${dest}/test-results/reports"/>
-  <property name="junit.includes" value="**/Test*.java,**/*Test.java"/>
 
   <property name="clover.db.dir" location="${dest}/tests/clover/db"/>
   <property name="clover.report.dir" location="${dest}/tests/clover/reports"/>
@@ -107,25 +58,6 @@
            <isset property="clover.present"/>
        </and>
    </condition>
-
-  <!-- Macro for compilation -->
-  <macrodef name="solr-javac">
-    <attribute name="destdir" />
-    <attribute name="classpathref" />
-    <element name="nested" optional="true" implicit="true" />
-    <sequential>
-      <mkdir dir="@{destdir}" />
-      <javac destdir="@{destdir}"
-             target="${java.compat.version}"
-             source="${java.compat.version}"
-             debug="on"
-             encoding="utf8"
-             sourcepath=""
-             classpathref="@{classpathref}">
-         <nested />
-      </javac>
-    </sequential>
-  </macrodef>
 
   <!-- Macro for building Jars -->
   <macrodef name="solr-jar">
@@ -146,34 +78,6 @@
     </sequential>
   </macrodef>
                  
-  <!-- Macro for building checksum files
-       This is only needed until the "format" option is supported
-       by ant's built in checksum task
-   -->
-  <macrodef name="solr-checksum">
-    <attribute name="file"/>
-    <!-- NOTE: we use the value of @{file} in the names any properties
-         set because macro's don't have variables, and otherwise we
-         wouldn't be able to checksum more then one file per build
-      -->
-    <sequential>
-     <checksum file="@{file}"
-               property="@{file}.sum"
-               algorithm="${checksum.algorithm}" />
-     <basename file="@{file}" property="@{file}.base" />
-     <concat destfile="@{file}.${checksum.algorithm}"
-             force="yes"
-             append="false"
-             fixlastline="yes">
-       <header trimleading="yes">${@{file}.sum}  </header>
-       <!-- empty fileset to trick concat -->
-       <fileset dir="." excludes="**" />
-       <footer trimleading="yes">${@{file}.base}
-       </footer>
-     </concat>
-    </sequential>
-  </macrodef>
-  
   <!-- Default target: usage.  Prints out instructions. -->
   <target name="usage"
           description="Prints out instructions">
@@ -188,7 +92,7 @@
   </target>
 
   <!-- Clean: cleans compiled files and other temporary artifacts. -->
-  <target name="clean"
+  <target name="clean" depends="contrib-clean"
           description="Cleans compiled files and other temporary artifacts.">
     <delete dir="${dest}" />
     <delete dir="${dist}" />
@@ -208,6 +112,10 @@
     <!-- no description, don't advertise -->
 
     <mkdir dir="${dest}" />
+  	
+  	<!-- A folder containing the expanded war file -->
+  	<mkdir dir="${dest}/web" />
+  	
     <echo  file="${dest}/solr-specific-forrest-variables.ent" append="false">
       &lt;!ENTITY solr.specversion "${specversion}"&gt;
     </echo>
@@ -252,7 +160,7 @@
     </solr-javac>
   </target>
 
-  <target name="javadoc" depends="compile"
+  <target name="core-javadoc" depends="compile"
           description="Generates javadoc documentation.">
 
     <mkdir dir="${build.javadoc}"/>
@@ -280,6 +188,9 @@
         <link href="${javadoc.link.lucene}"/>
         <classpath refid="javadoc.classpath"/>
     </javadoc>
+  </target>
+	
+  <target name="javadoc" depends="core-javadoc, contrib-javadoc">
   </target>
 
   <target name="stub-factories" depends="dist-jar"
@@ -352,8 +263,6 @@
       <arg line="${stub.src.dirs}"/>
     </exec>
   </target>
-
-  
 
   <!-- ========================================================================= -->
   <!-- ===================== CLIENT: solrj         ============================= -->
@@ -476,10 +385,15 @@
     </solr-javac>
   </target>
 
-  <!-- Run unit tests. -->
-  <target name="test"
-          description="Runs the unit tests."
+  <!-- Run core unit tests. -->
+  <target name="core-test"
+          description="Runs the core unit tests."
           depends="init-forrest-entities, compileTests, junit" />
+	
+  <!-- Run contrib unit tests. -->
+  <target name="test"
+        description="Runs the core unit tests."
+        depends="core-test, contrib-test" />
   
   <target name="junit" depends="compileTests">
     <!-- no description so it doesn't show up in -projecthelp -->  
@@ -571,60 +485,7 @@
   <!-- Creates the Solr distribution files. -->
   <target name="dist"
           description="Creates the Solr distribution files."
-          depends="init-forrest-entities, dist-war, dist-solrj, dist-jar" />
-
-  <!-- Creates a Manifest file for Jars and WARs -->
-  <target name="make-manifest" >
-     <!-- If possible, include the svnversion -->
-     <exec dir="." executable="svnversion" outputproperty="svnversion" failifexecutionfails="false">
-      <arg line="."/>
-     </exec>
-     
-     <!-- no description, don't advertise -->
-     <mkdir dir="${dest}/META-INF/" />
-     <manifest mode="replace" file="${dest}/META-INF/MANIFEST.MF">
-        <!--
-        http://java.sun.com/j2se/1.5.0/docs/guide/jar/jar.html#JAR%20Manifest
-        http://java.sun.com/j2se/1.5.0/docs/guide/versioning/spec/versioning2.html
-        http://java.sun.com/j2se/1.5.0/docs/api/java/lang/Package.html
-        http://java.sun.com/j2se/1.5.0/docs/api/java/util/jar/package-summary.html
-        http://java.sun.com/developer/Books/javaprogramming/JAR/basics/manifest.html
-        -->
-        <!-- Don't set 'Manifest-Version' it identifies the version of the
-             manifest file format, and should allways be 1.0 (the default)
-
-             Don't set 'Created-by' attribute, it's purpose is 
-             to identify the version of java used to build the jar,
-             which ant will do by default.
-
-             Ant will happily override these with bogus strings if you
-             tell it to, so don't.
-
-             NOTE: we don't use section info because all of our manifest data
-             applies to the entire jar/war ... no package specific info.
-        -->
-        <attribute name="Extension-Name" 
-                   value="org.apache.solr"/>
-        <attribute name="Specification-Title" 
-                   value="Apache Solr Search Server"/>
-        <!-- spec version must match "digit+{.digit+}*" -->
-        <attribute name="Specification-Version" 
-                   value="${specversion}"/>
-        <attribute name="Specification-Vendor" 
-                   value="The Apache Software Foundation"/>
-        <attribute name="Implementation-Title" 
-                   value="org.apache.solr"/>
-        <!-- impl version can be any string -->
-        <attribute name="Implementation-Version" 
-                   value="${version} ${svnversion} - ${user.name} - ${DSTAMP} ${TSTAMP}"/>
-        <attribute name="Implementation-Vendor" 
-                   value="The Apache Software Foundation"/>
-        <attribute name="X-Compile-Source-JDK" 
-                   value="${java.compat.version}"/>
-        <attribute name="X-Compile-Target-JDK" 
-                   value="${java.compat.version}"/>
-     </manifest>
-  </target>
+          depends="init-forrest-entities, dist-solrj, dist-jar, dist-contrib, dist-war" />
 
   <!-- Creates the Solr WAR file. -->
   <target name="dist-war"
@@ -645,6 +506,10 @@
        </lib>
        <lib dir="client/java/solrj/lib"/>
        <fileset dir="${src}/webapp/web" />
+       
+       <!-- Include anything put in by contrib projects -->
+       <fileset dir="${dest}/web" />
+       	
        <metainf dir="${basedir}" includes="LICENSE.txt,NOTICE.txt"/>
     </war>
   </target>
